# vulkan-app

./: .gitignore  CMakeLists.txt  README.md  vulkan-app.sln
lib/imgui-1.91.8/: CMakeLists.txt
shaders/: CMakeLists.txt  base.frag  base.vert  normaldebug.geom  shaders.vcxproj  simple.frag  simple.vert
shaders/fragment/: simple.frag
shaders/vertex/: simple.vert
src/: CMakeLists.txt  file.hpp  gfx.cpp  gfx.hpp  main.cpp  mesh.hpp  perlin.hpp  vulkan-app.vcxproj  window.cpp  window.hpp
src/graphics/: CMakeLists.txt  buffer.cpp  buffer.hpp  canvas.cpp  canvas.hpp  frame.hpp  image.hpp  program_builder.cpp  program_builder.hpp  recorder.cpp  recorder.hpp  swapchain.cpp
src/input/: CMakeLists.txt  keyboard.cpp  keyboard.hpp  mouse.cpp  state.hpp
transfer/: buffer.hpp  transfer.vcxproj
vulkan-app/: CMakeLists.txt  file.cpp  file.hpp  gfx.cpp  gfx.hpp  gfx_context.cpp  gfx_context.hpp  gfx_core.cpp  gfx_core.hpp  main.cpp  mesh.hpp  perlin.cpp  perlin.hpp  transfer_buffer.cpp  transfer_one_time_buffer.cpp  vk.cpp  vk.hpp  vulkan-app.vcxproj  window.cpp  window.hpp
vulkan-app/graphics/: CMakeLists.txt  buffer.cpp  buffer.hpp  canvas.cpp  canvas.hpp  context.cpp  context.hpp  descriptor_set.cpp  descriptor_set.hpp  descriptor_set_builder.cpp  descriptor_set_builder.hpp  descriptor_set_cache.cpp  descriptor_set_cache.hpp  device_image.cpp  device_image.hpp  frame.hpp  graphics.hpp  image.cpp  image.hpp  pass.cpp  pass.hpp  pipeline_builder.cpp  pipeline_builder.hpp  pipeline_layout.cpp  pipeline_layout.hpp  pipeline_layout_builder.cpp  pipeline_layout_builder.hpp  program.cpp  program.hpp  program_builder.cpp  program_builder.hpp  recorder.cpp  recorder.hpp  set_builder.cpp  set_builder.hpp  set_layout_builder.cpp  set_layout_builder.hpp  shader_builder.cpp  shader_builder.hpp  swapchain.cpp  (+1 more)
vulkan-app/input/: CMakeLists.txt  keyboard.cpp  keyboard.hpp  mouse.cpp  mouse.hpp
vulkan-app/transfer/: buffer.cpp  buffer.hpp
